--- a/obrigado.html
+++ b/obrigado.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <h2>Obrigada por se cadastrar</h2>
+
+    <form action="">
+        <h3>Deseja receber promoções diárias?</h3>
+        <input type="text" placeholder="Digite o seu email">
+        <div>
+            <input type="submit" value="Enviar">
+        </div>
+
+    </form>
 </body>
 </html>
