--- a/obrigado.html
+++ b/obrigado.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Obrigada por se cadastrar</h2>
+    <h2>Obrigada por se cadastrar em nosso site</h2>
 
     <form action="">
         <h3>Deseja receber promoções diárias?</h3>
